AR-721: screen groups and campaigns
