# public/api-spec-v1.yaml
@@ -1432,6 +1432,43 @@ paths:
         required: true
       deprecated: false
     parameters: []
+  '/v1/screen-groups-campaigns/{id}':
+    get:
+      operationId: getScreenGroupCampaignItem
+      tags:
+        - ScreenGroupCampaign
+      responses:
+        200:
+          description: 'ScreenGroupCampaign resource'
+          content:
+            application/ld+json:
+              schema:
+                $ref: '#/components/schemas/ScreenGroupCampaign.ScreenGroupCampaign.jsonld'
+            text/html:
+              schema:
+                $ref: '#/components/schemas/ScreenGroupCampaign.ScreenGroupCampaign'
+            multipart/form-data:
+              schema:
+                $ref: '#/components/schemas/ScreenGroupCampaign.ScreenGroupCampaign'
+        404:
+          description: 'Resource not found'
+      summary: 'Retrieves a ScreenGroupCampaign resource.'
+      description: 'Retrieves a ScreenGroupCampaign resource.'
+      parameters:
+        -
+          name: id
+          in: path
+          description: 'Resource identifier'
+          required: true
+          deprecated: false
+          allowEmptyValue: false
+          schema:
+            type: string
+          style: simple
+          explode: false
+          allowReserved: false
+      deprecated: false
+    parameters: []
   '/v1/screen-groups/{id}':
     get:
       operationId: get-v1-screen-groups-id
@@ -1533,6 +1570,185 @@ paths:
       parameters:
         -
           name: id
+          in: path
+          description: ''
+          required: true
+          deprecated: false
+          allowEmptyValue: false
+          schema:
+            type: string
+            format: ulid
+            pattern: '^[A-Za-z0-9]{26}$'
+          style: simple
+          explode: false
+          allowReserved: false
+      deprecated: false
+    parameters: []
+  '/v1/screen-groups/{id}/campaigns':
+    get:
+      operationId: get-v1-screen-groups-campaign-id
+      tags:
+        - ScreenGroups
+      responses:
+        200:
+          description: OK
+          content:
+            application/ld+json:
+              examples: null
+          headers: {  }
+      summary: 'Retrieves collection of campaign resources.'
+      description: 'Retrieves collection of campaign resources.'
+      parameters:
+        -
+          name: id
+          in: path
+          description: ''
+          required: true
+          deprecated: false
+          allowEmptyValue: false
+          schema:
+            type: string
+            format: ulid
+            pattern: '^[A-Za-z0-9]{26}$'
+          style: simple
+          explode: false
+          allowReserved: false
+        -
+          name: page
+          in: query
+          description: ''
+          required: true
+          deprecated: false
+          allowEmptyValue: false
+          schema:
+            type: integer
+            minimum: 0
+            format: int32
+            default: 1
+          style: form
+          explode: false
+          allowReserved: false
+        -
+          name: itemsPerPage
+          in: query
+          description: 'The number of items per page'
+          required: false
+          deprecated: false
+          allowEmptyValue: false
+          schema:
+            type: string
+            default: '10'
+          style: form
+          explode: false
+          allowReserved: false
+        -
+          name: published
+          in: query
+          description: 'If true only published content will be shown'
+          required: false
+          deprecated: false
+          allowEmptyValue: true
+          schema:
+            type: boolean
+          style: form
+          explode: false
+          allowReserved: false
+      deprecated: false
+    put:
+      operationId: put-v1-screen-groups-campaign-id
+      tags:
+        - ScreenGroups
+      responses:
+        200:
+          description: 'ScreenGroupCampaign resource updated'
+          content:
+            application/ld+json:
+              schema:
+                $ref: '#/components/schemas/ScreenGroupCampaign.ScreenGroupCampaign.jsonld'
+            text/html:
+              schema:
+                $ref: '#/components/schemas/ScreenGroupCampaign.ScreenGroupCampaign'
+            multipart/form-data:
+              schema:
+                $ref: '#/components/schemas/ScreenGroupCampaign.ScreenGroupCampaign'
+          links:
+            GetScreenGroupCampaignItem:
+              operationId: getScreenGroupCampaignItem
+              parameters:
+                id: '$response.body#/id'
+              description: 'The `id` value returned in the response can be used as the `id` parameter in `GET /v1/screen-groups-campaigns/{id}`.'
+        400:
+          description: 'Invalid input'
+        422:
+          description: 'Unprocessable entity'
+        404:
+          description: 'Resource not found'
+        201:
+          description: Created
+          content:
+            application/ld+json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties: { playlist: { type: string }, screen-group: { type: string } }
+      summary: 'Update the collection of campaigns on a screen group.'
+      description: 'Update the collection of campaigns on a screen group.'
+      parameters:
+        -
+          name: id
+          in: path
+          description: 'Resource identifier'
+          required: true
+          deprecated: false
+          allowEmptyValue: false
+          schema:
+            type: string
+          style: simple
+          explode: false
+          allowReserved: false
+      requestBody:
+        description: ''
+        content:
+          application/ld+json:
+            schema:
+              type: array
+              items:
+                type: object
+                properties:
+                  playlist: { type: string, format: ulid, pattern: '^[A-Za-z0-9]{26}$', description: 'Playlist ULID' }
+        required: false
+      deprecated: false
+    parameters: []
+  '/v1/screen-groups/{id}/campaigns/{campaignId}':
+    delete:
+      operationId: delete-v1-screen-groups-campaign-id
+      tags:
+        - ScreenGroups
+      responses:
+        204:
+          description: 'ScreenGroupCampaign resource deleted'
+        404:
+          description: 'Resource not found'
+      summary: 'Delete a campaign from a screen group.'
+      description: 'Delete a campaign from a screen group.'
+      parameters:
+        -
+          name: id
+          in: path
+          description: ''
+          required: true
+          deprecated: false
+          allowEmptyValue: false
+          schema:
+            type: string
+            format: ulid
+            pattern: '^[A-Za-z0-9]{26}$'
+          style: simple
+          explode: false
+          allowReserved: false
+        -
+          name: campaignId
           in: path
           description: ''
           required: true
@@ -3463,6 +3679,8 @@ components:
           type: string
         campaignScreens:
           $ref: '#/components/schemas/Collection'
+        campaignScreenGroups:
+          $ref: '#/components/schemas/Collection'
         isCampaign:
           type: boolean
         published:
@@ -3523,6 +3741,8 @@ components:
         slides:
           type: string
         campaignScreens:
+          $ref: '#/components/schemas/Collection.jsonld'
+        campaignScreenGroups:
           $ref: '#/components/schemas/Collection.jsonld'
         isCampaign:
           type: boolean
@@ -3942,6 +4162,8 @@ components:
           type: string
         createdBy:
           type: string
+        campaigns:
+          type: string
     ScreenGroup.ScreenGroup.jsonld:
       type: object
       description: ''
@@ -3982,6 +4204,8 @@ components:
         modifiedBy:
           type: string
         createdBy:
+          type: string
+        campaigns:
           type: string
     ScreenGroup.ScreenGroupInput:
       type: object
@@ -4030,6 +4254,43 @@ components:
           type: string
         createdBy:
           type: string
+    ScreenGroupCampaign.ScreenGroupCampaign:
+      type: object
+      description: ''
+      properties:
+        campaign:
+          type: string
+          format: iri-reference
+    ScreenGroupCampaign.ScreenGroupCampaign.jsonld:
+      type: object
+      description: ''
+      properties:
+        '@id':
+          readOnly: true
+          type: string
+        '@type':
+          readOnly: true
+          type: string
+        '@context':
+          readOnly: true
+          oneOf:
+            -
+              type: string
+            -
+              type: object
+              properties:
+                '@vocab':
+                  type: string
+                hydra:
+                  type: string
+                  enum: ['http://www.w3.org/ns/hydra/core#']
+              required:
+                - '@vocab'
+                - hydra
+              additionalProperties: true
+        campaign:
+          type: string
+          format: iri-reference
     ScreenLayout.ScreenLayout:
       type: object
       description: ''
