# src/Entity/EntityIdTrait.php
@@ -32,7 +32,7 @@ trait EntityIdTrait
     /**
      * Set the Ulid.
      *
-     * @return Screen|ScreenLayoutRegions|ScreenGroup|Media|Playlist|ScreenLayout|Slide|Template|PlaylistSlide|ScreenCampaign
+     * @return Screen|ScreenLayoutRegions|ScreenGroup|Media|Playlist|ScreenLayout|Slide|Template|PlaylistSlide|ScreenCampaign|ScreenGroupCampaign
      */
     public function setId(Ulid $id): self
     {
